infrastructure/base/pdns/external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-external
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
