infrastructure/base/pdns/pdns-admin-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
spec:
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: fischerscode/powerdns-admin-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
spec:
  selector:
    app: admin-frontend
  ports:
    - port: 80
      targetPort: 80
