infrastructure/base/pdns/pdns-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: fischerscode/powerdns-admin:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 9494
              protocol: TCP
        - name: admin-frontend
          image: fischerscode/powerdns-admin-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pdnsadmin
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
