infrastructure/base/pdns/pdns-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: dns-tcp
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dns-udp
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
