infrastructure/base/pdns/pdns-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: fischerscode/powerdns-auth:4.6.2
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "150m"
          ports:
            - containerPort: 5353
              protocol: TCP
              name: dns-tcp
            - containerPort: 5353
              protocol: UDP
              name: dns-udp
            - containerPort: 8081
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  selector:
    app: auth
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
