infrastructure/base/pdns/dashboard-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: "Host(`dns.${BASE_DOMAIN}`) || Host(`pdns.${BASE_DOMAIN}`) || Host(`powerdns.${BASE_DOMAIN}`)"
      services:
        - name: admin
          port: 80
  tls:
    secretName: dashboard-certificate
