infrastructure/base/pdns/dns-ingressroute-tcp.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dns
spec:
  entryPoints:
    - dns
  routes:
    - match: HostSNI(`*`)
      services:
        - name: "service"
          namespace: "namespace"
          port: 53
